[metadata]
name = rfest
version = 2.1.2
description = Python 3 toolbox for receptive field estimation
author = Ziwei Huang, Jonathan Oesterle
author_email = huang-ziwei@outlook.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
